fix: remove scrollbars

--- a/apps/web/assets/style/main.scss
+++ b/apps/web/assets/style/main.scss
@@ -1,5 +1,11 @@
 * {
     font-family: $body-font !important;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 #__nuxt {
